fix: gap in games container

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,14 +23,21 @@
 }
 
 .gamesContainer {
-  display: grid;
+  /* display: grid;
+  gap: 20px; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
   gap: 20px;
   max-height: 78vh;
+  align-content: flex-start;
+  justify-content: flex-start;
   overflow-y: scroll;
 }
 
 .twoColumns {
-  grid-template-columns: repeat(2, 1fr);
+  /* grid-template-columns: repeat(2, 1fr); */
 }
 
 .twoColumns img {
@@ -39,7 +46,7 @@
 }
 
 .threeColumns {
-  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: repeat(3, 1fr); */
 }
 
 .threeColumns img {
@@ -48,7 +55,7 @@
 }
 
 .fourColumns {
-  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(4, 1fr); */
 }
 
 .fourColumns img {
